--- a/style.css
+++ b/style.css
@@ -37,12 +37,12 @@ h1+hr{
 }
 .btn{
 
-	border:0 !important;
+	border:0;
 	background-color: #F05F44;
 	color: #eee;
 	text-transform: uppercase;
 	padding: 1rem 2rem;
-	border-radius: 300px !important;
+	border-radius: 300px;
 	font-weight: 600;
 	letter-spacing: 1.1px;
 	font-size: 1rem;
